# ServerAPI/src/api/controllers/friend.request.controller.ts
@@ -1,14 +1,15 @@
 import { request } from "express";
-import { Get, Path, Post, Put, Route, Tags } from "tsoa";
+import { Get, Path, Post, Put, Route, Security, Tags } from "tsoa";
 import { AuthDetailDTO } from "../../application/dtos/auth.dto";
 import { FriendRequestService } from "../../application/services/friend.request.service";
 import { prisma } from "../../config/prisma";
 import FriendRepository from "../../infrastructure/repositories/friend.repository";
 import FriendRequestRepository from "../../infrastructure/repositories/friend.request.repository";
-import { ResponseSuccessType } from "../middlewares/response.middleware";
+import { responseHandler, ResponseSuccessType } from "../middlewares/response.middleware";
 
 @Tags("Friend Request")
 @Route("friendRequest")
+@Security("BearerAuth")
 export class FriendRequestController {
   @Post("{id}")
   public async createFriendRequest(@Path() id: string): Promise<ResponseSuccessType<any>> {
@@ -16,10 +17,11 @@ export class FriendRequestController {
       new FriendRequestRepository(prisma()),
       new FriendRepository(prisma())
     );
-    const response = service.createFriendRequest(request.user as AuthDetailDTO, null, {
+    console.log("============",request.user);
+    const response = await service.createFriendRequest(request.user as AuthDetailDTO, null, {
       id: id,
     });
-    return response;
+    return responseHandler<any>(response);
   }
   @Put("{id}")
   public async acceptFriendRequest(@Path() id: string): Promise<ResponseSuccessType<any>> {
@@ -27,9 +29,8 @@ export class FriendRequestController {
       new FriendRequestRepository(prisma()),
       new FriendRepository(prisma())
     );
-    return service.acceptFriendRequest(request.user as AuthDetailDTO, null, {
-      id: id,
-    });
+    const response = await service.acceptFriendRequest(request.user as AuthDetailDTO, null, { id: id });
+    return responseHandler<any>(response);
   }
 
   @Get("sent")
@@ -50,9 +51,10 @@ export class FriendRequestController {
       new FriendRequestRepository(prisma()),
       new FriendRepository(prisma())
     );
-    return service.getFriendRequests(request.user as AuthDetailDTO, null, {
+    const response = await service.getFriendRequests(request.user as AuthDetailDTO, null, {
       pageSize: 10,
       pageNumber: 1,
     });
+    return responseHandler<any>(response);
   }
 }
